# stfu

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.cc  main2.cc  stfu.h  stufu.h
docs/: quick start.md
include/stfu/: expect.h  stfu.h
tests/: main.cc  main2.cpp  main3.cpp
